--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@ a {
 }
 a:hover, a:focus {
 	text-decoration: none;
-	color: #AB1F3A;
+	color: #EEE8AA;
 }
 ul, ol {
 	list-style: none;
@@ -96,7 +96,7 @@ hr {
 	bottom: -1px;
 	width: 0;
 	height: 2px;
-	background: linear-gradient(to right, #AB1F3A 0%, #AB1F3A 100%);
+	background: linear-gradient(to right, #EEE8AA 0%, #EEE8AA 100%);
 	content: "";
 	transition: width 0.2s;
 }
@@ -122,10 +122,10 @@ hr {
 }
 .navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {
 	background-color: #fff;
-	border-color: #AB1F3A;
+	border-color: #EEE8AA;
 }
 .navbar-default .navbar-toggle:hover>.icon-bar {
-	background-color: #AB1F3A;
+	background-color: #EEE8AA;
 }
 .section-title {
 	margin-bottom: 70px;
@@ -153,7 +153,7 @@ hr {
 	font-family: 'Raleway', sans-serif;
 	text-transform: uppercase;
 	color: #fff;
-	background-color: #AB1F3A;
+	background-color: #EEE8AA;
 	background-image: linear-gradient(to right, #AB1F3A 0%, #AB1F3A 100%);
 	padding: 14px 34px;
 	letter-spacing: 1px;
@@ -167,7 +167,7 @@ hr {
 .btn-custom:hover, .btn-custom:focus, .btn-custom.focus, .btn-custom:active, .btn-custom.active {
 	color: #fff;
 	background-image: none;
-	background-color: #AB1F3A;
+	background-color: #EEE8AA;
 }
 .btn:active, .btn.active {
 	background-image: none;
@@ -204,7 +204,7 @@ a:focus, .btn:focus, .btn:active:focus, .btn.active:focus, .btn.focus, .btn:acti
 }
 .intro h1 span {
 	font-weight: 800;
-	color: #AB1F3A;
+	color: #EEE8AA;
 }
 .intro p {
 	color: #fff;
@@ -342,7 +342,7 @@ header .sub-intro {
 	text-align: center;
 	margin: 0 auto;
 	color: #fff;
-	background: linear-gradient(to right, #AB1F3A 0%, #AB1F3A 100%);
+	background: linear-gradient(to right, #EEE8AA 0%, #EEE8AA 100%);
 	padding: 30% 0 0 0;
 	height: 100%;
 	width: 100%;
@@ -561,7 +561,7 @@ color: #777;
 	transition: all 0.3s;
 }
 #contact .social i.fa:hover {
-	color: #AB1F3A;
+	color: #EEE8AA;
 	background: #fff;
 }
 
@@ -576,7 +576,7 @@ color: #777;
 	padding: 1px;
 }
 #footer a {
-	color: #AB1F3A;
+	color: #EEE8AA;
 }
 #footer a:hover {
 	border-bottom: 3px solid #AB1F3A;
