--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,7 @@ hr {
 }
 #menu.navbar-default {
 
-	background-image: linear-gradient(to right, #AB1F3A 0%, #AB1F3A 100%);
+	background-image: linear-gradient(to right, #EEE8AA 0%, #EEE8AA 100%);
 	border-color: rgba(231, 231, 231, 0);
 	box-shadow: 0 0 10px rgba(0,0,0,0.15)
 }
@@ -139,7 +139,7 @@ hr {
 .section-title h2::after {
 	position: absolute;
 	content: "";
-	background: linear-gradient(to right, #AB1F3A 0%, #AB1F3A 100%);
+	background: linear-gradient(to right, #EEE8AA 0%, #EEE8AA 100%);
 	height: 4px;
 	width: 60px;
 	bottom: 0;
@@ -154,7 +154,7 @@ hr {
 	text-transform: uppercase;
 	color: #fff;
 	background-color: #EEE8AA;
-	background-image: linear-gradient(to right, #AB1F3A 0%, #AB1F3A 100%);
+	background-image: linear-gradient(to right, #EEE8AA 0%, #EEE8AA 100%);
 	padding: 14px 34px;
 	letter-spacing: 1px;
 	margin: 0;
