--- a/css/style.css
+++ b/css/style.css
@@ -216,7 +216,7 @@ a:focus, .btn:focus, .btn:active:focus, .btn.active:focus, .btn.focus, .btn:acti
 .intro h1 {
 	font-family: 'Raleway', sans-serif;
 	color: #fff;
-	font-size: 75px;
+	font-size: 65px;
 	font-weight: 700;
 	margin-top: 0px;
 	margin-bottom: 10px;
@@ -339,6 +339,16 @@ header .sub-intro {
 #LetsPy p {
 	line-height: 24px;
 	margin: 30px 0;
+}
+
+
+#buttons {
+	padding-bottom: 100px;
+	padding-top: 100px;
+	background-color: #eae9e9;
+}
+.button-item {
+	padding: 10px;
 }
 
 
@@ -608,6 +618,23 @@ color: #777;
 
 .brand-pic {
 	margin-top: -30px;
+}
+#gallery {
+	padding-top: 50px;
+	padding-bottom: 50px;
+}
+
+#gallery .gallery-item {
+	padding: 10px;
+}
+
+#gallery .gallery-button {
+	padding: 30px;
+	padding-top: 50px;
+}
+
+#gallery .button-row {
+	margin: 20px;
 }
 
 
