--- a/css/style.css
+++ b/css/style.css
@@ -204,7 +204,7 @@ a:focus, .btn:focus, .btn:active:focus, .btn.active:focus, .btn.focus, .btn:acti
 	width: 100%;
 	padding: 0;
 	background: url(../img/intro-bg.jpeg) center center no-repeat;
-	background-color: #e5e5e5;
+	background-color: #000000;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	background-size: cover;
