--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@ body, html {
 	font-weight: 400;
 	width: 100% !important;
 	height: 100% !important;
+
 }
 
 h2, h3, h4 {
@@ -237,6 +238,7 @@ header .intro-text {
 	padding-top: 250px;
 	padding-bottom: 200px;
 	text-align: center;
+
 }
 
 header .sub-intro {
@@ -402,7 +404,7 @@ header .sub-intro {
 
 /* Testimonials Section */
 #testimonials {
-	padding: 100px 0;
+	padding-top: 50px;
 	overflow-x: hidden;
 	background: #eae9e9;
 
@@ -627,6 +629,7 @@ color: #777;
 
 .brand-pic {
 	margin-top: -40px;
+	margin-left: -70px;
 }
 #gallery {
 	padding-top: 50px;
@@ -652,10 +655,24 @@ color: #777;
 
 #videos {
 	margin-bottom: 50px;
+	background: #eae9e9;
+	
 }
 
 #videos .btn-custom {
 	margin: 20px;
+}
+
+#client {
+	margin-top: 50px;
+	margin-bottom: 70px;
+	padding-bottom: 20px;
+	overflow-x: hidden;
+
+}
+
+#client .abcd {
+	text-align: center !important;
 }
 
 @media (max-width: 768px) {
