--- a/css/carousel.css
+++ b/css/carousel.css
@@ -5,6 +5,7 @@
 
 .slick-slide img {
     width: 100%;
+    height: 100%
 }
 
 .slick-slider
@@ -15,7 +16,7 @@
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
-            user-select: none;
+    user-select: none;
     -webkit-touch-callout: none;
     -khtml-user-select: none;
     -ms-touch-action: pan-y;
@@ -86,7 +87,7 @@
 }
 .slick-slide img
 {
-    display: block;
+    /* display: block; */
 }
 .slick-slide.slick-loading img
 {
